# graphalg

./: .devcontainer.json  .gitignore  Gemfile  README.md  _config.yml  index.md  package-lock.json  package.json
compiler/: CMakeLists.txt  ci-wasm.sh  ci.sh  collect_coverage.py  configure-coverage.sh  configure-wasm.sh  configure.sh  sql.sh
compiler/coverage/: configure-coverage.sh  create-report.sh
compiler/include/garel/: CMakeLists.txt  GARelAttr.h  GARelAttr.td  GARelDialect.td  GARelOps.h  GARelOps.td  GARelPasses.td  GARelSQL.h  GARelTupleOps.td  GARelTypes.h  GARelTypes.td
compiler/include/graphalg/: CMakeLists.txt  GraphAlgAttr.h  GraphAlgAttr.td  GraphAlgCast.h  GraphAlgDialect.h  GraphAlgDialect.td  GraphAlgInterfaces.h  GraphAlgOps.h  GraphAlgOps.td  GraphAlgPasses.h  GraphAlgPasses.td  GraphAlgSetConstArg.h  GraphAlgTypes.h  SemiringTypes.h
compiler/include/graphalg/analysis/: DenseAnalysis.h
compiler/include/graphalg/evaluate/: Evaluator.h
compiler/include/graphalg/parse/: Lexer.h
compiler/src/: CMakeLists.txt  graphalg-exec.cpp  graphalg-opt.cpp  graphalg-playground.cpp  graphalg-playground.js  parse.cpp  wasm_parse.cpp  wasm_parse.js
compiler/src/garel/: CMakeLists.txt  GARelAttr.cpp  GARelDialect.cpp  GARelOps.cpp  GARelSQL.cpp  GARelTupleOps.cpp  GARelTypes.cpp  GraphAlgToRel.cpp
compiler/src/graphalg/: CMakeLists.txt  GraphAlgAttr.cpp  GraphAlgCanonicalize.cpp  GraphAlgCast.cpp  GraphAlgDialect.cpp  GraphAlgExplicateSparsity.cpp  GraphAlgInferDensity.cpp  GraphAlgInterfaces.cpp  GraphAlgLoopAggregate.cpp  GraphAlgOps.cpp  GraphAlgPrepareInlinePass.cpp  GraphAlgScalarizeApply.cpp  GraphAlgSetConstArg.cpp  GraphAlgSetDimensions.cpp  GraphAlgSplitAggregate.cpp  GraphAlgToCore.cpp  GraphAlgToCorePipeline.cpp  GraphAlgTypes.cpp  GraphAlgVerifyDimensions.cpp  GraphAlgVerifyLoopBounds.cpp  SemiringTypes.cpp
compiler/test/: CMakeLists.txt  attr.mlir  basic.gr  lit.cfg.py  lit.site.cfg.py.in  loop.gr  types.mlir
compiler/test/canonicalize/: add.mlir  apply.mlir  broadcast.mlir  cast-dim.mlir  cast.mlir  deferred-reduce.mlir  eq.mlir  for-dim.mlir  mat-mul.mlir  mul.mlir  pick-any.mlir  transpose.mlir  union.mlir
compiler/test/e2e/: bfs.gr  cdlp.gr  pr.gr  sssp.gr  wcc.gr
compiler/test/exec/: add.mlir  apply.mlir  broadcast.mlir  cast.mlir  diag-rowvec.mlir  diag.mlir  div.mlir  eq.mlir  for.mlir  matmul.mlir  mul.mlir  pick_any.mlir  reduce-cols.mlir  reduce-rows.mlir  reduce.mlir  sssp.gr  sub-int.mlir  sub-real.mlir  transpose.mlir  tril.mlir  until.mlir
compiler/test/explicate-sparsity/: add.mlir  make-dense.mlir
compiler/test/golden/: bfs.gr  bfs.mlir.ref  cdlp.gr  cdlp.mlir.ref  lcc.gr  lcc.mlir.ref  pr.gr  pr.mlir.ref  sssp.gr  sssp.mlir.ref  tc.gr  tc.mlir.ref  update_goldens.sh  wcc.gr  wcc.mlir.ref
compiler/test/graphalg-split-aggregate/: ewise-add.mlir  make-dense.mlir  mat-mul.mlir  reduce.mlir
compiler/test/graphalg-to-core/: cast.mlir  ewise.mlir  literal.mlir  mask.mlir  neg.mlir  not.mlir  nvals.mlir  triu.mlir  vec-mat-mul.mlir
compiler/test/graphalg-to-rel/: GEMINI.md  add.mlir  apply.mlir  broadcast.mlir  cast-dim.mlir  cast.mlir  const-mat.mlir  const.mlir  deferred-reduce.mlir  diag.mlir  div.mlir  eq.mlir  for-const.mlir  for-dim.mlir  for.mlir  mat-mul-join.mlir  mul.mlir  pick-any.mlir  sub.mlir  transpose.mlir  tril.mlir  union.mlir
compiler/test/infer-density/: ewise-add.mlir  for.mlir
compiler/test/inline/: apply-binary.mlir  apply-ewise.mlir  apply-scalar.mlir  apply-unary.mlir  select-binary.mlir  select-unary.mlir  wrap.mlir
compiler/test/loop-aggregate/: add-init-reduce.mlir
compiler/test/parse/: accum.gr  apply.gr  arith.gr  assign.gr  basic.gr  cast.gr  compare.gr  diag-scalar.gr  diag.gr  ewise.gr  identity.gr  literal.gr  loop.gr  new.gr  pickAny.gr  prec.gr  prop.gr  reduce.gr  select.gr  tril.gr
compiler/test/parse-err/: accum-type-mismatch.gr  accum-undefined.gr  apply-binary-second-arg-not-scalar.gr  apply-func-non-scalar-args.gr  apply-unary-func-wrong-arg-count.gr  apply-undefined-func.gr  cmp-bool-unsupported.gr  cmp-trop-int-unsupported.gr  diag-not-vector.gr  div-bool-unsupported.gr  div-int-unsupported.gr  div-trop-real-unsupported.gr  ewise-different-dimensions.gr  ewise-different-semirings.gr  ewise-func-different-dimensions.gr  ewise-func-non-scalar-params.gr  ewise-func-type-mismatch-left.gr  ewise-func-type-mismatch-right.gr  ewise-func-undefined.gr  ewise-func-wrong-param-count.gr  func-name-dup.gr  func-param-dup.gr  literal-bool-from-int.gr  literal-int-from-real.gr  literal-trop-real-from-bool.gr  loop-range-end-non-int.gr  loop-range-not-dimension.gr  loop-range-start-non-int.gr  loop-scope.gr  loop-until-non-bool.gr  mask-dimension-mismatch.gr  matmul-dimension-mismatch.gr  matrix-fill-col-vector.gr  neg-bool-unsupported.gr  neg-matrix.gr  neg-trop-int-unsupported.gr  neg-vector.gr  not-int-unsupported.gr  not-matrix.gr  not-real-unsupported.gr  (+21 more)
compiler/test/scalarize-apply/: apply.mlir  cast-dim.mlir  cast.mlir  constant.mlir  ewise.mlir  for-const.mlir  for-dim.mlir  for.mlir  literal.mlir  mask.mlir  matmul.mlir  neg.mlir  not.mlir  nvals.mlir  trivial.mlir
compiler/test/set-dimensions/: apply.mlir  cast-dim.mlir  const-mat.mlir  err-missing-function.mlir  err-no-such-function.mlir  err-parameters.mlir  for-dim.mlir
compiler/test/sql/: bfs.gr  cdlp.gr  pr.gr  sssp.gr  wcc.gr
compiler/test/verify-dimensions/: cast-dim.mlir  const-mat.mlir  for-dim.mlir
compiler/test/verify-loop-bounds/: for.mlir
compiler/tools/: CMakeLists.txt  fuzz-parser.cpp  garel-translate.cpp  graphalg-exec.cpp  graphalg-lsp-server.cpp  graphalg-opt.cpp  graphalg-translate.cpp
pg_graphalg/: CMakeLists.txt  README.md  configure.sh  test.sql
pg_graphalg/include/pg_graphalg/: MatrixTable.h  PgGraphAlg.h
pg_graphalg/src/: CMakeLists.txt  pg_graphalg.c  pg_graphalg.cpp
pg_graphalg/src/pg_graphalg/: CMakeLists.txt  MatrixTable.cpp  PgGraphAlg.cpp
pg_graphalg/test/: sssp.sql  test.sql
playground/cpp/: CMakeLists.txt  configure-wasm.sh  configure.sh  graphalg-playground.cpp
(+115 files in other folders)
